Flexbox code examples almost done.

--- a/src/index.html
+++ b/src/index.html
@@ -485,7 +485,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 1</h2>
-        <p class="dev-article__text">In this first example, we have a div within div, a box, and a wrap. The box has been styled with fixed with and height, plus a small margin and the wrap has a red border. This is the standard behavior of a div within a div, nothing has been floated here.</p>
+        <p class="dev-article__text">In this first example, we have a div within div, a box, and a wrap. The box has
+          been styled with fixed with and height, plus a small margin and the wrap has a red border. This is the
+          standard behavior of a div within a div, nothing has been floated here.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -502,7 +504,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 2</h2>
-        <p class="dev-article__text">This is our first proper example of floating an element. As you can see the div has been floated to the right, and it has moved all the way to the top right. The problem with floating objects is that their parent loses its height. As you can see, the parent wrap no has 0 height.</p>
+        <p class="dev-article__text">This is our first proper example of floating an element. As you can see the div
+          has been floated to the right, and it has moved all the way to the top right. The problem with floating
+          objects is that their parent loses its height. As you can see, the parent wrap no has 0 height.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -519,10 +523,11 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 3</h2>
-        <p class="dev-article__text">In this example, we have text wrapped in P-tag and div, both within a single div. This is the standard behavior of the objects. No floats have been applied here.</p>
+        <p class="dev-article__text">In this example, we have text wrapped in P-tag and div, both within a single div.
+          This is the standard behavior of the objects. No floats have been applied here.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
             <script src="https://gist.github.com/f54vnfg/f71e287297eef0234c0d0be1f683d7ae.js"></script>
           </div>
           <div class="code-example__code-output">
@@ -539,10 +544,12 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 4</h2>
-        <p class="dev-article__text">This is a continuation from the previous example. Let us say you want to have a picture within the text and you want the text to wrap around it. Well, you can use a float. No clearfix has been applied, the parent height isn't 0, what happened? Well, the parent box wrapping itself around the text.</p>
+        <p class="dev-article__text">This is a continuation from the previous example. Let us say you want to have a
+          picture within the text and you want the text to wrap around it. Well, you can use a float. No clearfix has
+          been applied, the parent height isn't 0, what happened? Well, the parent box wrapping itself around the text.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
             <script src="https://gist.github.com/f54vnfg/be47d911bd27b659ea2b65710876a9d9.js"></script>
           </div>
           <div class="code-example__code-output">
@@ -559,10 +566,12 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 5</h2>
-        <p class="dev-article__text">Look What happens if we have the same example, but the text tag is outside of the red div wrap that we used previously. The height has collapsed to 0. But in many cases, we don't want this to happen.</p>
+        <p class="dev-article__text">Look What happens if we have the same example, but the text tag is outside of the
+          red div wrap that we used previously. The height has collapsed to 0. But in many cases, we don't want this to
+          happen.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
             <script src="https://gist.github.com/f54vnfg/13a446e4c7aad51cb27cea0c5f4a8520.js"></script>
           </div>
           <div class="code-example__code-output">
@@ -576,13 +585,14 @@
         </div>
       </article>
 
-
       <article class="dev-article">
         <h2 class="dev-article__title">Example 6</h2>
-        <p class="dev-article__text">Here is the solution to the previous problem, the clear fix function which fixes the collapsed height of the red wrapper div. This is very useful because if you don't clearfix your floats, most times your layout will get messed up.</p>
+        <p class="dev-article__text">Here is the solution to the previous problem, the clear fix function which fixes
+          the collapsed height of the red wrapper div. This is very useful because if you don't clearfix your floats,
+          most times your layout will get messed up.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
             <script src="https://gist.github.com/f54vnfg/6ba3783cb0e26c6a7a8b77c5e2d615ee.js"></script>
           </div>
           <div class="code-example__code-output">
@@ -604,14 +614,279 @@
     <div class="siteSection__sub-wrap">
 
       <article class="dev-article">
-        <h2 class="dev-article__title"></h2>
-        <p class="dev-article__text"></p>
+        <h2 class="dev-article__title">Example 1</h2>
+        <p class="dev-article__text">For reference, in our first example you can see the standart look of few divs within a parent div. Just css styles has been applied.</p>
         <div class="code-example">
           <div class="code-example__code-input">
-            <p class="code-example__title">HTML:</p>
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/3e8997c32146db65a8d2dbe1f3c30ddf.js"></script>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
+            <div class="red-border">
+              <div class="gray-box">Box-1</div>
+              <div class="gray-box">Box-2</div>
+              <div class="gray-box">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 2</h2>
+        <p class="dev-article__text">In this first example are not only setting the parent to display flex. We are also, setting the flex-direction to a column with reversed order. You can also use this property without the reverse function, which is how it would usually be used.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/e630e05fce1f8081e2df6fe1b3b8dc23.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex colum-reverse">
+              <div class="gray-box">Box-1</div>
+              <div class="gray-box">Box-2</div>
+              <div class="gray-box">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 3</h2>
+        <p class="dev-article__text">This what happens to the first example once you apply a display flex property. As you can see, by default the direction is changed to column and the boxes no longer stretch to the full width of the page.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/940d0af17aebc948c0af0f22c763066b.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex">
+              <div class="gray-box">Box-1</div>
+              <div class="gray-box">Box-2</div>
+              <div class="gray-box">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 4</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/8ddb29d68dbe87d8969741c6137d3a44.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex row-reverse">
+              <div class="gray-box">Box-1</div>
+              <div class="gray-box">Box-2</div>
+              <div class="gray-box">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 5</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/7f5a59a6a868eda56837121db5f976f1.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex">
+              <div class="gray-box width40">Box-1</div>
+              <div class="gray-box width40">Box-2</div>
+              <div class="gray-box width40">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 6</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/8de4f581186a99075390d490971b3585.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex flex-wrap">
+              <div class="gray-box width40">Box-1</div>
+              <div class="gray-box width40">Box-2</div>
+              <div class="gray-box width40">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 7</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/67c3479c2ca35b2df6d854fd9ee466c0.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex just-start">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex just-center">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex just-end">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 8</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/c4f5f4d859ee23e7e379fe3ffe516040.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex just-between">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex just-around">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex just-center">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 9</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/075ec7a9c7505674af86e046dfad82ed.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex-2 align-start">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex-2 align-end">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex-2 align-center">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex-2">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 10</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/374f58ff8e8e7508c393b419f28167ed.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex-2">
+              <div class="gray-box width15 self-start">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex-2">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15 self-center">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+            <div class="red-border flex-2">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15">Box-2</div>
+              <div class="gray-box width15 self-end">Box-3</div>
+            </div>
+            <div class="red-border flex-2">
+              <div class="gray-box width15">Box-1</div>
+              <div class="gray-box width15 self-center">Box-2</div>
+              <div class="gray-box width15">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 11</h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/b92b0d3c8397fa0c3ec7e0604d80ca24.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex">
+              <div class="gray-box gray-box-1">Box-1</div>
+              <div class="gray-box gray-box-2">Box-2</div>
+              <div class="gray-box gray-box-3">Box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 12</h2>
+        <p class="dev-article__text">flex shorthand property</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML + CSS:</p>
+            <script src="https://gist.github.com/f54vnfg/6e78bd3bb20531dd19ef1a78bc924125.js"></script>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border flex">
+              <div class="gray-box gray-box-2-1">Box-1</div>
+              <div class="gray-box gray-box-2-2">Box-2</div>
+              <div class="gray-box gray-box-2-3">Box-3</div>
+            </div>
           </div>
         </div>
       </article>
