--- a/src/index.html
+++ b/src/index.html
@@ -615,7 +615,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 1</h2>
-        <p class="dev-article__text">For reference, in our first example you can see the standart look of few divs within a parent div. Just css styles has been applied.</p>
+        <p class="dev-article__text">For reference, in our first example, you can see the standard look of few divs within a parent div. Just CSS styles have been applied.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -653,7 +653,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 3</h2>
-        <p class="dev-article__text">This what happens to the first example once you apply a display flex property. As you can see, by default the direction is changed to column and the boxes no longer stretch to the full width of the page.</p>
+        <p class="dev-article__text">This what happens to the first example once you apply a display flex property. As you can see, by default the direction is changed to the column and the boxes no longer stretch to the full width of the page.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -672,7 +672,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 4</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">In this example, we can see what happens when we display as flex, then apply flex direction of row and reverse the display direction.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -691,7 +691,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 5</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">In this example, we are again displaying the parent as flex, but this time we have set each box to have 40% width. As you can see, each box does not have 40% with. What happens here is that the box simply stretches out as much as possible, but doesn't break the box model to make each box width 40%.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -710,7 +710,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 6</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">There is a property of flex that allows you to wrap each item to the next line. It's called flex-wrap. We have the same code as the previous example, but here we have applied the flex-wrap property to the parent which cases the boxes to wrap once they run out of space. As you can see each box is has a 40% width.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -729,7 +729,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 7</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">This is the justify property. It can move the boxes to the start, center, and end of the parent box. Don't forget that if you change the flow of flex using the flex-direction property, you can to use the align-items property to have the same effect.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -758,7 +758,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 8</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">These are the two extra properties for justifying items, space-between, and space-around. Very useful. You can also use them with other flex align properties.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -787,7 +787,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 9</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">In this example, we have used the align-items property to align all the boxes to some spot vertically. You can notice that here we have the default flex direction, which is a column. So, align-items aligns the boxes to the top, middle or bottom. The default property is stretch which stretches the box to 100% width. Please note that we have applied static height to the parent box.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -821,7 +821,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 10</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">Here we have used a less commonly used property align-self to one of the boxes for each example. You can use this property to individually align boxes to the top, middle or bottom.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -855,7 +855,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 11</h2>
-        <p class="dev-article__text"></p>
+        <p class="dev-article__text">In this example, I am showcasing very interesting property, flex-grow. You can use this property to dynamically assign more space to one object over another. There is also the flex-shrink property which does exactly the opposite. This property is very useful when you have objects that must be smaller or bigger than the rest. The best use for this is in the responsive design, where the pages get smaller all the boxes will keep the ratios, which is really sweet!</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -874,7 +874,7 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 12</h2>
-        <p class="dev-article__text">flex shorthand property</p>
+        <p class="dev-article__text">In this final example, we are covering the shorthand flex property. In this property, you can assign flex-grow, flex-shrink and flex-basis. We have already covered the first two, so least cover the last. Flex-basis is the ideal width you want for your box. For example, you can set 20% or 100px etc, and the browser will try to match this requirement, but if they're too many boxes then the layout will not get broken, the box will simply have a smaller width. This is amazing!</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
