gird layout examples

--- a/src/index.html
+++ b/src/index.html
@@ -615,7 +615,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 1</h2>
-        <p class="dev-article__text">For reference, in our first example, you can see the standard look of few divs within a parent div. Just CSS styles have been applied.</p>
+        <p class="dev-article__text">For reference, in our first example, you can see the standard look of few divs
+          within a parent div. Just CSS styles have been applied.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -634,7 +635,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 2</h2>
-        <p class="dev-article__text">In this first example are not only setting the parent to display flex. We are also, setting the flex-direction to a column with reversed order. You can also use this property without the reverse function, which is how it would usually be used.</p>
+        <p class="dev-article__text">In this first example are not only setting the parent to display flex. We are
+          also, setting the flex-direction to a column with reversed order. You can also use this property without the
+          reverse function, which is how it would usually be used.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -653,7 +656,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 3</h2>
-        <p class="dev-article__text">This what happens to the first example once you apply a display flex property. As you can see, by default the direction is changed to the column and the boxes no longer stretch to the full width of the page.</p>
+        <p class="dev-article__text">This what happens to the first example once you apply a display flex property. As
+          you can see, by default the direction is changed to the column and the boxes no longer stretch to the full
+          width of the page.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -672,7 +677,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 4</h2>
-        <p class="dev-article__text">In this example, we can see what happens when we display as flex, then apply flex direction of row and reverse the display direction.</p>
+        <p class="dev-article__text">In this example, we can see what happens when we display as flex, then apply flex
+          direction of row and reverse the display direction.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -691,7 +697,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 5</h2>
-        <p class="dev-article__text">In this example, we are again displaying the parent as flex, but this time we have set each box to have 40% width. As you can see, each box does not have 40% with. What happens here is that the box simply stretches out as much as possible, but doesn't break the box model to make each box width 40%.</p>
+        <p class="dev-article__text">In this example, we are again displaying the parent as flex, but this time we have
+          set each box to have 40% width. As you can see, each box does not have 40% with. What happens here is that
+          the box simply stretches out as much as possible, but doesn't break the box model to make each box width 40%.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -710,7 +718,10 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 6</h2>
-        <p class="dev-article__text">There is a property of flex that allows you to wrap each item to the next line. It's called flex-wrap. We have the same code as the previous example, but here we have applied the flex-wrap property to the parent which cases the boxes to wrap once they run out of space. As you can see each box is has a 40% width.</p>
+        <p class="dev-article__text">There is a property of flex that allows you to wrap each item to the next line.
+          It's called flex-wrap. We have the same code as the previous example, but here we have applied the flex-wrap
+          property to the parent which cases the boxes to wrap once they run out of space. As you can see each box is
+          has a 40% width.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -729,7 +740,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 7</h2>
-        <p class="dev-article__text">This is the justify property. It can move the boxes to the start, center, and end of the parent box. Don't forget that if you change the flow of flex using the flex-direction property, you can to use the align-items property to have the same effect.</p>
+        <p class="dev-article__text">This is the justify property. It can move the boxes to the start, center, and end
+          of the parent box. Don't forget that if you change the flow of flex using the flex-direction property, you
+          can to use the align-items property to have the same effect.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -758,7 +771,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 8</h2>
-        <p class="dev-article__text">These are the two extra properties for justifying items, space-between, and space-around. Very useful. You can also use them with other flex align properties.</p>
+        <p class="dev-article__text">These are the two extra properties for justifying items, space-between, and
+          space-around. Very useful. You can also use them with other flex align properties.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -787,7 +801,10 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 9</h2>
-        <p class="dev-article__text">In this example, we have used the align-items property to align all the boxes to some spot vertically. You can notice that here we have the default flex direction, which is a column. So, align-items aligns the boxes to the top, middle or bottom. The default property is stretch which stretches the box to 100% width. Please note that we have applied static height to the parent box.</p>
+        <p class="dev-article__text">In this example, we have used the align-items property to align all the boxes to
+          some spot vertically. You can notice that here we have the default flex direction, which is a column. So,
+          align-items aligns the boxes to the top, middle or bottom. The default property is stretch which stretches
+          the box to 100% width. Please note that we have applied static height to the parent box.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -821,7 +838,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 10</h2>
-        <p class="dev-article__text">Here we have used a less commonly used property align-self to one of the boxes for each example. You can use this property to individually align boxes to the top, middle or bottom.</p>
+        <p class="dev-article__text">Here we have used a less commonly used property align-self to one of the boxes for
+          each example. You can use this property to individually align boxes to the top, middle or bottom.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -855,7 +873,11 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 11</h2>
-        <p class="dev-article__text">In this example, I am showcasing very interesting property, flex-grow. You can use this property to dynamically assign more space to one object over another. There is also the flex-shrink property which does exactly the opposite. This property is very useful when you have objects that must be smaller or bigger than the rest. The best use for this is in the responsive design, where the pages get smaller all the boxes will keep the ratios, which is really sweet!</p>
+        <p class="dev-article__text">In this example, I am showcasing very interesting property, flex-grow. You can use
+          this property to dynamically assign more space to one object over another. There is also the flex-shrink
+          property which does exactly the opposite. This property is very useful when you have objects that must be
+          smaller or bigger than the rest. The best use for this is in the responsive design, where the pages get
+          smaller all the boxes will keep the ratios, which is really sweet!</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -874,7 +896,11 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title">Example 12</h2>
-        <p class="dev-article__text">In this final example, we are covering the shorthand flex property. In this property, you can assign flex-grow, flex-shrink and flex-basis. We have already covered the first two, so least cover the last. Flex-basis is the ideal width you want for your box. For example, you can set 20% or 100px etc, and the browser will try to match this requirement, but if they're too many boxes then the layout will not get broken, the box will simply have a smaller width. This is amazing!</p>
+        <p class="dev-article__text">In this final example, we are covering the shorthand flex property. In this
+          property, you can assign flex-grow, flex-shrink and flex-basis. We have already covered the first two, so
+          least cover the last. Flex-basis is the ideal width you want for your box. For example, you can set 20% or
+          100px etc, and the browser will try to match this requirement, but if they're too many boxes then the layout
+          will not get broken, the box will simply have a smaller width. This is amazing!</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML + CSS:</p>
@@ -896,17 +922,142 @@
 
   <section class="siteSection" id="grid">
     <h1 class="siteSection__heading">Grid</h1>
-    <div class="siteSection__sub-wrap">
+    <div class="siteSection__sub-wrap-2">
 
-      <article class="dev-article">
-        <h2 class="dev-article__title"></h2>
-        <p class="dev-article__text"></p>
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 1</h2>
+        <p class="dev-article__text">Again, in this first example we begin with the default look of 3 divs within a
+          parent div. No layout css has been applied, just siple styling.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
+            <div class="red-border">
+              <div class="gray-box">box-1</div>
+              <div class="gray-box">box-2</div>
+              <div class="gray-box">box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 2</h2>
+        <p class="dev-article__text">In this example, we have applied diplay grid to the parent element. As you can see
+          something wired happens. The space between objects starts to look wired. This is becouse every box gets put
+          into a grid layout, and each box is technically no longer teach each other. Now you can see the full margin
+          being applied to each box.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border grid">
+              <div class="gray-box">box-1</div>
+              <div class="gray-box">box-2</div>
+              <div class="gray-box">box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 3</h2>
+        <p class="dev-article__text">In this example, we are explaring setting the grid layout. You can see a layout of
+          3 rows, the middle bieng larger then the rest. Here we have used grid template columns to apply 1by2by1 ratio
+          with fr units. As you can see you have set the layout for hte first column, but it trickles down in the same
+          stile, no matter how many boxes you put. </p>
+
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border grid grid-2-3-2">
+              <div class="gray-box">box-1</div>
+              <div class="gray-box">box-2</div>
+              <div class="gray-box">box-3</div>
+              <div class="gray-box">box-4</div>
+              <div class="gray-box">box-5</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 3</h2>
+        <p class="dev-article__text">If we have a lot of euqaly sized boxes we can use the shorthand property repeat(6,
+          1fr) which would make the colum have 6 boxes all with 1fr widht. Also, you can use grid-gap insted of
+          margins. this is really cool as you wont have to remove, add, or equalize tricks margins with the boxes on
+          each side and the parent box itself to make it look nice. Just plain and simple, add your grid-gap and
+          everything will look as it should.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border grid grid-rp-6 grid-gap-5">
+                <div class="gray-box">box-1</div>
+                <div class="gray-box">box-2</div>
+                <div class="gray-box">box-3</div>
+                <div class="gray-box">box-4</div>
+                <div class="gray-box">box-5</div>
+                <div class="gray-box">box-6</div>
+                <div class="gray-box">box-7</div>
+                <div class="gray-box">box-8</div>
+                <div class="gray-box">box-9</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 4</h2>
+        <p class="dev-article__text">As you can see in this example, you can align boxes in a lot of different ways
+          within the grid. You can use <b>align-tiems, justify-content and align-self</b> - much like flexbox. Even
+          though you can use similar code, both grid and flex-box are different and should be used for different
+          application. Also, remeber that grid is newer technology, and if you are after browser support, you should
+          probubly avoid using it. </p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border grid grid-rp-3 grid-ar-100">
+              <div class="gray-box self-start">box-1</div>
+              <div class="gray-box self-center">box-2</div>
+              <div class="gray-box self-end">box-3</div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article-2">
+        <h2 class="dev-article__title">Example 5</h2>
+        <p class="dev-article__text">As you can see in this example, the first box is much larger then all the other boxes. This is one of the best uses of grid, it can allow you to make on box bigger then the rest quickly while not breaking your layout at all. As you can see the first image spans accross 6 rows and 2 colums.  This is great for galleries, as you can set them up really quickly without having to mess or fix code when you change something later on.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="red-border grid grid-rp-3 grid-ar-100">
+                <div class="gray-box grid-gall">box-1</div>
+                <div class="gray-box">box-2</div>
+                <div class="gray-box">box-3</div>
+                <div class="gray-box">box-4</div>
+                <div class="gray-box">box-5</div>
+                <div class="gray-box">box-6</div>
+                <div class="gray-box">box-7</div>
+                <div class="gray-box">box-8</div>
+                <div class="gray-box">box-9</div>
+            </div>
           </div>
         </div>
       </article>
